LIST OF CHANGES

 
 - Tracking web server:
   - Added a new optional parameter 'manufacturer' to methods returning lists
     of runs and run count - the name of the manufacturer. If this name is
     undefined in the parameters hash, it defaults to 'Illumina'.
   - To avoid code repetition, consolidated queries for listing and counting
     runs in npg::model::run. Previously the same code was repeated in six
     different places in two models.
   - Simplified the logic of retrieving cached lists and counts of runs.

 - Fixed perlbrew installation by installing libdevel-patchperl-perl in
   GitHub runner.

release 102.0.0 (2024-11-28)
 - Removed 'bin/npg_deletable_dr_runs' since dr storage is decommissioned

release 101.6.0 (2024-10-24)
 - Added sample_uuid and sample_lims methods to st::api::lims
 - Patched st::api::lims::samplesheet to allow for scalar attributes
   ending with 's'. Previously the values of attributes with names
   ending with 's' were automatically converted to lists. In fact,
   this was necessary only for comma-separated strings of email addresses.
   The part of code that deals with email addresses was changed to
   work on attributes with names starting with 'email' rather than
   ending with 's'. Prior to applying this patch the value of the
   new 'sample_lims' attribute was returned as a list when a samplesheet
   was used as a source of LIMS data.
 - Documented handling of multiple values in st::api::lims.
 - Added is_lane method and composition_object attribute to st::api::lims.

release 101.5.1 (2024-10-04)
 - Added .github/dependabot.yml file to auto-update GitHub actions
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so